# peach-tree-planting

./: README.md  main.py  pyproject.toml
app/: __init__.py
app/apis/: router.py
app/apis/data_manage/: view.py
app/apis/home/: view.py
app/apis/knowledge_manage/: view.py
app/apis/login/: view.py
app/apis/user/: view.py
app/core/: app_context.py  config.py  exception.py  log.py  middleware.py
app/core/connect/: mongo_conn.py  redis_conn.py
app/models/: base_model.py
app/models/user_db/: __init__.py  user_model.py
app/schemas/: __init__.py  data_labeling.py  request_schema.py
app/utils/: define.py  enumerate.py  http_client.py
scripts/: lint.sh
tests/: test.py
